--- a/graphql-crud/package.json
+++ b/graphql-crud/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "description": "GraphQL CURD application using Apollo server",
   "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^7.3.16",
+    "@graphql-tools/load": "^7.6.0",
+    "@graphql-tools/merge": "^8.2.15",
+    "apollo-server": "^3.9.0",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.5.0",
