--- a/graphql-crud/package.json
+++ b/graphql-crud/package.json
@@ -9,6 +9,7 @@
     "@graphql-tools/load": "^7.6.0",
     "@graphql-tools/merge": "^8.2.15",
     "apollo-server": "^3.9.0",
+    "dataloader": "^2.1.0",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.5.0",
